tests/init/neg/unsound2.check
-- Error: tests/init/neg/unsound2.scala:5:26 ---------------------------------------------------------------------------
5 |        def getN: Int = a.n // error
  |                        ^^^
  |   Access field value n on a cold object. Calling trace:
  |   -> case class A(x: Int) {	[ unsound2.scala:1 ]
  |      ^
  |   -> println(foo(x).getB)	[ unsound2.scala:8 ]
  |              ^^^^^^
  |   -> def foo(y: Int): B = if (y > 10) then B(bar(y - 1), foo(y - 1).getN) else B(bar(y), 10)	[ unsound2.scala:2 ]
  |                                                          ^^^^^^^^^^^^^^^
  |   -> def getN: Int = a.n // error	[ unsound2.scala:5 ]
  |                      ^^^
